跑通了，但还有一些bug。